# claude-code-notifier

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-hook-event-backbone/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-VALIDATION.md  01-VERIFICATION.md  SKELETON.md
.planning/phases/02-first-useful-reminders/: 02-01-PLAN.md  02-01-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/phases/03-operator-trust-surface/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md  03-DISCUSSION-LOG.md  03-VERIFICATION.md
.planning/phases/03.1-codex-hook-support-chinese-localization/: 03.1-01-PLAN.md  03.1-01-SUMMARY.md  03.1-02-PLAN.md  03.1-02-SUMMARY.md  03.1-03-PLAN.md  03.1-03-SUMMARY.md  03.1-CONTEXT.md  03.1-DISCUSSION-LOG.md  03.1-HUMAN-UAT.md  03.1-RESEARCH.md  03.1-VERIFICATION.md
.planning/phases/04-abnormal-state-detection/: 04-01-PLAN.md  04-02-PLAN.md  04-CONTEXT.md  04-DISCUSSION-LOG.md  04-RESEARCH.md  04-VALIDATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/notifier/: __main__.py
src/notifier/cli/: config.py  hook.py
src/notifier/core/: events.py  ipc.py  notify.py  session.py  settings.py  text.py
src/notifier/server/: tcp_server.py
src/notifier/tests/: conftest.py  test_cli_config.py  test_cli_hook.py  test_events.py  test_ipc.py  test_menu.py  test_notify.py  test_session.py  test_settings.py  (+1 more)
(+3 files in other folders)
