[project]
name = "claude-code-notifier"
version = "0.1.0"
description = "Desktop notifications for Claude Code events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.25.0",
    "mergedeep>=1.3.4",
    "pystray>=0.19.5",
    "winotify>=1.0.0",
    "Pillow>=10.0.0",
]

[project.scripts]
notifier-hook = "notifier.cli.hook:app"
notifier-config = "notifier.cli.config:app"

[tool.pytest.ini_options]
testpaths = ["src/notifier/tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
